# rins_project

./: .gitignore  CMakeLists.txt  CMakeLists_copy.txt  README.md  arm_mover_actions.py  detect_people2.py  detect_rings27.py  embeddings.json  greet_people.py  package.xml  problems.md  robot_explorer.py  sim_topics.txt  turtlebot4_spawn.launch.py
config/: nav2.yaml  nav2_careless_extreme.yaml  nav2_careless_mild.yaml  nav2_careless_moderate.yaml
cplusplus/: cylinder_segmentation.cpp
dis_tutorial7_stvari/: arm_mover_actions.py  sim_turtlebot_nav.launch.py  turtlebot4_spawn.launch.py
embeddings_db/: embeddings.npy  knn_model.pkl  labels.npy  metadata.json
launch/: robot_launch.py  scripts_all.launch.py  sim_turtlebot_nav.launch.py  task2_movement_launch.py
maps/: task2_map.pgm  task2_map.yaml
rins_interfaces/: CMakeLists.txt  package.xml
rins_interfaces/msg/: BarrelsResults.msg  RingsResults.msg  TilesResults.msg
scripts/: DETECT_PEOPLE_2s.py  QR_NODE_2s.py  RECOGNIZE_PEOPLE_2s.py  anomaly_detector.py  cylinder_detection.py  detect_obstacles.py  detect_people1_robot.py  detect_people2_robot.py  detect_rings1_robot.py  detect_rings27.py  detect_yellow_line.py  greet_people.py  greet_people1_robot.py  greet_people_2s.py  new_cylinder.py  recognize_people_2s.py  red_green_cell_detection.py  red_green_cell_detection_better.py  robot_explorer.py  task_manager.py  tile_detection.py
task1_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
task1_ws/install/task1/share/task1/: package.bash  package.dsv  package.sh  package.zsh
task1_ws/src/task1/: CMakeLists.txt
task1_ws/src/task1/launch/: dis_sim.launch.py  localization.launch.py  nav2.launch.py  robot_description.launch.py  sim.launch.py  sim_turtlebot_nav.launch.py  sim_turtlebot_slam.launch.py  slam.launch.py  turtlebot4_spawn.launch.py
task1_ws/src/task1/scripts/: detect_rings.py
worlds/: task2_delay.sdf
worlds/task2_delay_meshes/: map.mtl
